--- a/examples/jsfiddle.html
+++ b/examples/jsfiddle.html
@@ -65,8 +65,10 @@
 <script src="../split.js"></script>
 <script>
     Split(['#a', '#b'], {
+      sizes: [25, 75],
       gutterSize: 8,
-      cursor: 'col-resize'
+      cursor: 'col-resize',
+      fixed:true
     })
 
     Split(['#c', '#d'], {
